salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Disposition__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Disposition__c</fullName>
    <label>Omnishift Disposition</label>
    <description>What the user did with the Growth Agent recommendation. This is the training label - it must be a restricted picklist so the values stay reportable and cannot drift.</description>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Approved and sent</fullName><default>false</default><label>Approved and sent</label></value>
            <value><fullName>Edited before send</fullName><default>false</default><label>Edited before send</label></value>
            <value><fullName>Call logged</fullName><default>false</default><label>Call logged</label></value>
            <value><fullName>Snoozed</fullName><default>false</default><label>Snoozed</label></value>
            <value><fullName>Wrong person</fullName><default>false</default><label>Wrong person</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>