salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Draft_Edited__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Draft_Edited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Omnishift Draft Edited</label>
    <type>Checkbox</type>
    <description>Set when an advisor saves an edit. The nightly run leaves an edited draft alone, because regenerating it would throw away their work.</description>
</CustomField>