salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Recommended_Owner__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Recommended_Owner__c</fullName>
    <label>Omnishift Recommended Owner</label>
    <description>Advisory only. Never write OwnerId in bulk - ownership changes force sharing recalculation across the role hierarchy.</description>
    <type>Lookup</type><referenceTo>User</referenceTo>
    <relationshipLabel>Omnishift Recommended Contacts</relationshipLabel>
    <relationshipName>Omnishift_Recommended_Contacts</relationshipName>
<deleteConstraint>SetNull</deleteConstraint>
</CustomField>