salesforce/omnishift-sf/force-app/main/default/objects/Contact/fields/Omnishift_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>Omnishift_Run_Id__c</fullName>
    <label>Omnishift Run Id</label>
    <description>Provenance: which scoring run produced this recommendation.</description>
    <length>40</length><type>Text</type><required>false</required>
</CustomField>