salesforce/omnishift-sf/force-app/main/default/objects/Contact/listViews/Omnishift_Today.listView-meta.xml
<ListView>
    <fullName>Omnishift_Today</fullName>
    <label>Growth Agent - Today</label>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Omnishift_Next_Action_Date__c</field>
        <operation>lessOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Omnishift_Rank__c</columns>
    <columns>Omnishift_Score__c</columns>
    <columns>Omnishift_Why_Now__c</columns>
    <columns>Omnishift_Compliance_Status__c</columns>
    <columns>Omnishift_Disposition__c</columns>
</ListView>